builder/tests/08-unrecognized-attribute.stderr
error: expected "each" in `builder(each = "...")`
  --> tests/08-unrecognized-attribute.rs:22:15
   |
22 |     #[builder(eac = "arg")]
   |               ^^^
